Typos and de-hyphenation of stream entry

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -113,7 +113,7 @@ The monks accepted his instructions and listened.
 31\. “What are four things to know? The four kinds of eloquence: Eloquence of teachings, eloquence of meaning, eloquence of expression, and eloquence of responses.
 {:#p31}
 
-32\. “What are four things to be realized? The four fruits of the ascetic: The fruit of stream-entry, fruit of once-returning, fruit of non-returning, and fruit of the arhat.
+32\. “What are four things to be realized? The four fruits of the ascetic: The fruit of  stream entry, fruit of once-returning, fruit of non-returning, and fruit of the arhat.
 {:#p32}
 
 33\. “Monks, these forty things are true and not false. They’ve been known by the Tathāgata who teaches the Dharma equally.
