--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -71,7 +71,7 @@ The monks then accepted the teaching and listened.
 17\. “What are four things to be ceased? The four acquisitions: the acquisition of desires, acquisition of self, acquisition of precepts, and acquisition of views.
 {:#p17}
 
-18\. “What are four things to be realized? The four fruits of the ascetic: The fruit of stream-entry, fruit of once-returning, fruit of non-returning, and fruit of the arhat.
+18\. “What are four things to be realized? The four fruits of the ascetic: The fruit of  stream entry, fruit of once-returning, fruit of non-returning, and fruit of the arhat.
 {:#p18}
 
 #### The Fives
