--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -126,7 +126,7 @@ He replied, “I don’t know them.”
 31\. “Sometimes, a person doesn’t go contrary to his instructions. They end the three bonds, weaken lust, anger, and delusion, and become a once-returner. They return to this world and then attain <em>nirvāṇa</em>.[\[3\]](#n3){:#ref3} This is the third instruction.
 {:#p31}
 
-32\. “Sometimes, a person doesn’t go contrary to his instructions. They end the three bonds and attain stream-entry. They are reborn seven times at most, surely achieve the fruit of the path, and won’t fall to bad destinations. This is the fourth instruction.
+32\. “Sometimes, a person doesn’t go contrary to his instructions. They end the three bonds and attain  stream entry. They are reborn seven times at most, surely achieve the fruit of the path, and won’t fall to bad destinations. This is the fourth instruction.
 {:#p32}
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
