--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -78,7 +78,7 @@ Lohitya said, “Yes, it’s true that this happened.”
 21\. “Lohitya, there’s one Bhagavān who doesn’t reside in the mundane and cannot be shaken. Who is the one? If a Tathāgata, an Arhat, and a Completely Awakened One appears in the world … <em>up to</em> … attains three knowledges, eliminates ignorance, gives rise to the radiance of wisdom, leaves behind darkness, and produces the great light of Dharma, then that’s known as the realization of the knowledge that the contaminants are ended. What is the reason for that? These are attainments that come from diligence, focus, mindfulness, unforgetfulness, and happy solitude. Lohitya, this is the first Bhagavān who doesn’t reside in the mundane and cannot be shaken.
 {:#p21}
 
-22\. “Lohitya, there are four fruits of the mendicant. What are the four? They are the fruit of stream-entry, fruit of once-returning, fruit of non-returning, and the fruit of the <em>arhat</em>. How is it, Lohitya? Someone who hears the teaching should attain these four fruits of a mendicant. Suppose someone prohibits it by saying, ‘Don’t teach the Dharma.’ If those words are put into action, would that person hear the Dharma and attain these fruits by doing so?”
+22\. “Lohitya, there are four fruits of the mendicant. What are the four? They are the fruit of  stream entry, fruit of once-returning, fruit of non-returning, and the fruit of the <em>arhat</em>. How is it, Lohitya? Someone who hears the teaching should attain these four fruits of a mendicant. Suppose someone prohibits it by saying, ‘Don’t teach the Dharma.’ If those words are put into action, would that person hear the Dharma and attain these fruits by doing so?”
 {:#p22}
 
 “He won’t attain them.”
