--- a/01_agama/madhyama/MA_127.md
+++ b/01_agama/madhyama/MA_127.md
@@ -20,7 +20,7 @@ next: MA_137.html
 3\. The Bhagavān told him, “Householder, the world has altogether two kinds of people who are fields of merit. Which two? First are the trainees, and second are the adepts. There are eighteen kinds of trainees and nine kinds of adepts.
 {:#p3}
 
-4\. “Householder, what are the eighteen kinds of trainees?[\[2\]](#n2){:#ref2} Faithful practitioners, Dharma practitioners, those freed by faith, those who’ve arrived at [right] view, those of self-realization, those born from family to family, those of a single seed, those headed for stream-entry, those who’ve attained stream-entry, those headed for once-returning, those who’ve attained once-returning, those headed for non-returning, those who’ve attained non-returning, those who parinirvāṇa in the interim, those who parinirvāṇa at birth, those who parinirvāṇa with practice, those who parinirvāṇa without practice, and those who [parinirvāṇa] upstream to Akaniṣṭha. These are the eighteen kinds of trainees.
+4\. “Householder, what are the eighteen kinds of trainees?[\[2\]](#n2){:#ref2} Faithful practitioners, Dharma practitioners, those freed by faith, those who’ve arrived at [right] view, those of self-realization, those born from family to family, those of a single seed, those headed for  stream entry, those who’ve attained  stream entry, those headed for once-returning, those who’ve attained once-returning, those headed for non-returning, those who’ve attained non-returning, those who parinirvāṇa in the interim, those who parinirvāṇa at birth, those who parinirvāṇa with practice, those who parinirvāṇa without practice, and those who [parinirvāṇa] upstream to Akaniṣṭha. These are the eighteen kinds of trainees.
 {:#p4}
 
 5\. “Householder, what are the nine kinds of adepts?[\[3\]](#n3){:#ref3} Those who are intent, those who are ascending, those who are imperturbable, those who retreat, those who don’t retreat, those who are guarding <em>(those who guard don’t retreat; and those who don’t guard do retreat)</em>, those who truly abide, those liberated by wisdom, and those liberated in both ways. These are the nine kinds of adepts.”
