--- a/01_agama/dirgha/DA_30-12.md
+++ b/01_agama/dirgha/DA_30-12.md
@@ -143,7 +143,7 @@ next: index.html
 
 * {:.verse} “For these ten reasons,\\
 The sun is called a thousand lights.\\
-It’s light is fiery and hot,\\
+Its light is fiery and hot,\\
 As described by the Buddha sun.”
 
 #### Thirteen Reasons for Cold Weather in Sunlight
