--- a/01_agama/ekottarika/14/EA_14_07.md
+++ b/01_agama/ekottarika/14/EA_14_07.md
@@ -42,7 +42,7 @@ next: EA_14_08.html
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576c09" target="_blank">T125.2.576c9-17</a>. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>instigates conflicts between one group and another, they will fall into hell, among the hungry ghosts, and among animals</em>. C. 鬪亂是非，便墮畜生、餓鬼中。 I’ve adopted alternate readings that change this passage to “鬪亂<strong>彼此</strong>，便墮<strong>地獄</strong>、畜生、餓鬼中.” I’ve also corrected the order of the bad destinies in my translation to place animals last, which follows the pattern in this chapter. Uncorrected, the Taisho reads: “instigates conflicts, right or wrong, they will fall among animals and hungry ghosts.” [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>Therefore, monks, one should always … Thus, monks …</em>. C. 是故，當至誠莫得妄語。是故，諸比丘，當作是學. I’ve adopted alternate readings that correct obvious corruptions to this standard conclusion. The Taisho omits “monks” in the first sentence, and then changes “thus” to “therefore.” Uncorrected, the Taisho reads: “Therefore, you should be honest and not speak falsely.^Therefore, monks, you should train yourselves.” [<a href="#ref3">back</a>]</p></li>
+<li id="n3"><p><em>Therefore, monks, one should always … Thus, monks …</em>. C. 是故，當至誠莫得妄語。是故，諸比丘，當作是學. I’ve adopted alternate readings that correct obvious corruptions to this standard conclusion. The Taisho omits “monks” in the first sentence, and then changes “thus” to “therefore.” Uncorrected, the Taisho reads: “Therefore, you should be honest and not speak falsely. Therefore, monks, you should train yourselves.” [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
