Made "What's that one thing" uncontracted ("what is").

--- a/01_agama/ekottarika/10/EA_10_01.md
+++ b/01_agama/ekottarika/10/EA_10_01.md
@@ -19,7 +19,7 @@ next: EA_10_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.563c12'>爾時，世尊告諸比丘： 「當修行一法、當廣布一法。 修行一法、廣布一法已，便得神通，諸行寂靜，得沙門果，至泥洹界。 云何為一法？ 所謂無放逸行。 云何為無放逸行？ 所謂護心也。 云何護心？</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>.<sup id="ref2"><a href="#n2">2</a></sup> What’s that one thing? It’s the practice of carefulness. What is the practice of carefulness? It’s guarding the mind. And what is guarding the mind?</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>.<sup id="ref2"><a href="#n2">2</a></sup> What is that one thing? It’s the practice of carefulness. What is the practice of carefulness? It’s guarding the mind. And what is guarding the mind?</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.563c16'>「於是，比丘常守護心有漏、有漏法。 當彼守護心有漏、有漏法，於有漏法便得悦豫。 亦有信樂，住不移易，恒專其意，自力勸勉。</td>
