--- a/01_agama/ekottarika/10/EA_10_02.md
+++ b/01_agama/ekottarika/10/EA_10_02.md
@@ -19,7 +19,7 @@ next: EA_10_03.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.564a5'>爾時世尊告諸比丘： 「當修行一法當廣布一法。 修行一法、廣布一法已，便得神通，諸行寂靜，得沙門果，至泥洹處。 云何為一法？ 謂無放逸行於諸善法。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One must develop one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll then attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>. What’s that one thing? It’s the practice of carefulness in the good teachings.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One must develop one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll then attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>. What is that one thing? It’s the practice of carefulness in the good teachings.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.564a8'>「云何無放逸行？ 所謂不觸嬈一切眾生，不害一切眾生，不惱一切眾生。 是謂無放逸行。 彼云何名善法？ 所謂賢聖八道品，等見、等方便、等語、等行、等命、等治、等念、等定。 是謂善法。」</td>
