--- a/01_agama/ekottarika/11/EA_11_01.md
+++ b/01_agama/ekottarika/11/EA_11_01.md
@@ -19,7 +19,7 @@ next: EA_11_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.566b7'>爾時，世尊告諸比丘： 「當滅一法，我證卿等成阿那含。 云何為一法？ 所謂貪欲。 諸比丘，當滅貪欲，我證卿等得阿那含。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone were to cease one thing, I’d bear witness that they’ve become a non-returner. What’s that one thing? It’s greed. Monks, you should cease greed, then I’ll bear witness that you’ve become non-returners.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone were to cease one thing, I’d bear witness that they’ve become a non-returner. What is that one thing? It’s greed. Monks, you should cease greed, then I’ll bear witness that you’ve become non-returners.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.566b9'>爾時，世尊便説此偈：</td>
