--- a/01_agama/samyukta/14/SA14_17.md
+++ b/01_agama/samyukta/14/SA14_17.md
@@ -20,7 +20,7 @@ next: ../19/index.html
 3\. Venerable Ānanda then roused from his meditation and went to the Buddha. He bowed his head at his feet, withdrew to sit at one side, and said to the Buddha, “Bhagavān, I was alone in a quiet place, reflecting and meditating. I had this thought, ‘Could it be that there’s one thing that when cultivated and cultivated often will cause the fulfillment of four things … and that will fulfill two things?’ Now, I’d like to ask the Bhagavān, is there one thing that when cultivated often can cause … the fulfillment of two things?”
 {: #p3}
 
-4\. The Buddha told Ānanda, “There is one thing that when cultivated often … can cause the fulfillment of two things. What’s that one thing? It’s mindfulness of breathing. When it’s cultivated often, it can cause the fulfillment of the four abodes of mindfulness. After fulfilling the four abodes of mindfulness, the seven factors of awakening are fulfilled. After fulfilling the seven factors of awakening, insight and liberation are fulfilled.
+4\. The Buddha told Ānanda, “There is one thing that when cultivated often … can cause the fulfillment of two things. What is that one thing? It’s mindfulness of breathing. When it’s cultivated often, it can cause the fulfillment of the four abodes of mindfulness. After fulfilling the four abodes of mindfulness, the seven factors of awakening are fulfilled. After fulfilling the seven factors of awakening, insight and liberation are fulfilled.
 {: #p4}
 
 5\. “How does cultivating mindfulness of breathing fulfill the four abodes of mindfulness? Suppose a monk depends on a village … mindfully trains according to cessation as he exhales.
