--- a/01_agama/ekottarika/02/EA_02_05.md
+++ b/01_agama/ekottarika/02/EA_02_05.md
@@ -19,7 +19,7 @@ next: EA_02_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.553a13'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 便成神通，去眾亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念施。 當善修行，當廣演布。 便成神通，除眾亂想，逮沙門果，自致涅槃。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s that one thing? It’s called recollecting generosity. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What is that one thing? It’s called recollecting generosity. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.553a17'>「如是，諸比丘，當修行一法，當廣布一法。 如是，諸比丘當作是學。」</td>
