--- a/01_agama/ekottarika/11/EA_11_01.md
+++ b/01_agama/ekottarika/11/EA_11_01.md
@@ -27,10 +27,10 @@ next: EA_11_02.html
   </tr>
 <tr>
   <td title='T125.2.566b11'><ul class='verse'>
-    <li class='ch'>貪婬之所染<br/>
+    <li class='ch'>「貪婬之所染<br/>
     眾生墮惡趣。<br/>
     當懃捨貪欲，<br/>
-    便成阿那含。</li>
+    便成阿那含。」</li>
   </ul></td>
   <td><ul class='verse'>
     <li>“The stain of greed<br/>
@@ -40,7 +40,7 @@ next: EA_11_02.html
   </ul></td>
 </tr>
   <tr>
-    <td class='ch' title='T125.2.566b13'>T0125_.02.0566b13: 爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td class='ch' title='T125.2.566b13'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
     <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved. </td>
   </tr>
 </table>
