--- a/01_agama/ekottarika/11/EA_11_03.md
+++ b/01_agama/ekottarika/11/EA_11_03.md
@@ -33,7 +33,7 @@ next: EA_11_04.html
     便成阿那含。」</li>
   </ul></td>
   <td><ul class='verse'>
-    <li>“The stained of delusion<br/>
+    <li>“The stain of delusion<br/>
     Makes sentient beings fall to bad destinies.<br/>
     One should endeavor to abandon delusion,<br/>
     Then they’ll become a non-returner.”</li>
