--- a/01_agama/ekottarika/11/EA_11_05.md
+++ b/01_agama/ekottarika/11/EA_11_05.md
@@ -19,7 +19,7 @@ next: EA_11_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.566c10'>爾時，世尊告諸比丘： 「我於此眾初不見一法不可降伏。難得時，宜受諸苦報。 所謂心是。 諸比丘，此心不可降伏。 難得時，宜受諸苦報。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “From the start, I don’t see in this assembly a single thing that’s uncontrollable and which is sure to bring a result of suffering when its difficult to control. That thing is the heart. Monks, this heart is uncontrollable. When its difficult to gain control of it, it surely brings a result of suffering.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “From the start, I don’t see in this assembly a single thing that’s uncontrollable and which is sure to bring a result of suffering when it’s difficult to control. That thing is the heart. Monks, this heart is uncontrollable. When it’s difficult to gain control of it, it surely brings a result of suffering.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.566c13'>「是故，諸比丘，當分別心。 當思惟心，善念諸善本。 如是，諸比丘，當作是學。」</td>
