--- a/01_agama/ekottarika/11/EA_11_06.md
+++ b/01_agama/ekottarika/11/EA_11_06.md
@@ -19,7 +19,7 @@ next: EA_11_07.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.566c17'>爾時，世尊告諸比丘： 「我於此眾初不見一法易降伏者，易得時宜受諸善報。 所謂心是。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “From the start, I do not see in this assembly a single thing that’s easily controlled and which brings a good result when its easily controlled. That thing is the heart.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “From the start, I do not see in this assembly a single thing that’s easily controlled and which brings a good result when it’s easily controlled. That thing is the heart.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.566c19'>「諸比丘，當分別心，善念諸善本。 如是，諸比丘，當作是學。」</td>
