--- a/01_agama/ekottarika/11/EA_11_07.md
+++ b/01_agama/ekottarika/11/EA_11_07.md
@@ -37,7 +37,7 @@ next: EA_11_08.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0566c22" target="_blank">T125.2.566c22-7a3</a>. This <em>sūtra</em> and the next are very similar in subject and format to <a href="https://suttacentral.net/sn17.11" target="_blank">SN 17.11-20</a>, but they don’t use specific examples of valuable things like gold and silver. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p>It should be noted that the C. translations  garbled in the opening paragraphs of this and next the <em>sūtra</em>, but knowledge of their parallels makes it possible to sort out what the original said. For example, the opening line of this <em>sūtra</em> could easily be read to say: “If there’s a person in this assembly who thinks, ‘I fully know it’” (i.e., 若有一人而作是念：「我悉知之」). But the parallels make it clear that the Buddha was fully knew what the person was thinking. The nature of those thoughts isn’t described here, which may well be because of a loss of text. The situation is even more confusing in the next <em>sūtra</em>’s opening line because it doesn’t indicate who is thinking. On the other hand, it includes a description of the person’s thinking before they became obsessed with valuable things. Thus, between the two <em>sūtra</em>s, we can more-or-less reconstruct what the opening lines said with help from the Theravāda parallels. Nonetheless, I’ve added as little as possible to the extant C. [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p>It should be noted that the C. translations garbled the opening paragraphs of this and next the <em>sūtra</em>, but knowledge of their parallels makes it possible to sort out what the original said. For example, the opening line of this <em>sūtra</em> could easily be read to say: “If there’s a person in this assembly who thinks, ‘I fully know it’” (i.e., 若有一人而作是念：「我悉知之」). But the parallels make it clear that the Buddha fully knew what the person was thinking. The nature of those thoughts isn’t described here, which may well be because of a loss of text. The situation is even more confusing in the next <em>sūtra</em>’s opening line because it doesn’t indicate who is thinking. On the other hand, it includes a description of the person’s thinking before they became obsessed with valuable things. Thus, between the two <em>sūtra</em>s, we can more-or-less reconstruct what the opening lines said with help from the Theravāda parallels. Nonetheless, I’ve added as little as possible to the extant C. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
