--- a/01_agama/ekottarika/11/EA_11_10.md
+++ b/01_agama/ekottarika/11/EA_11_10.md
@@ -39,7 +39,7 @@ next: ../12/EA_12_01.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.567b23'>阿難對曰： 「如是，世尊。」 是時，阿難受世尊教，便往至彼比丘所。 到已，語彼比丘曰： 「如來呼卿。」</td>
-    <td id='p7'>7. Ānanda replied, “Yes, Bhagavān.” Ānanda then accepted the Bhagavān’s instruction and went to that monk. Arriving there, he said to that monk, “The Bhagavān has summoned you.”</td>
+    <td id='p7'>7. Ānanda replied, “Yes, Bhagavān.” Ānanda then accepted the Bhagavān’s instruction and went to that monk. Arriving there, he said to that monk, “The Tathāgata has summoned you.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.567b25'>彼比丘對曰： 「如是，尊者。」 爾時，彼比丘便嚴衣服，共阿難至世尊所。 到已，禮世尊足，在一面坐。</td>
@@ -70,7 +70,7 @@ next: ../12/EA_12_01.html
     復還墮地獄。</li>
   </ul></td>
   <td><ul class='verse'>
-    <li>“Traversing the dhyānas and worldly understanding,<br/>
+    <li>“Traversing the <em>dhyāna</em>s and worldly understanding,<br/>
     One will lack liberation at the end.<br/>
     Not taking the steps to complete cessation,<br/>
     One falls back into hell.</li>
@@ -116,7 +116,7 @@ next: ../12/EA_12_01.html
 </tr>
   <tr>
     <td class='ch' title='T125.2.567c26'>爾時，彼比丘及四部眾聞佛所説歡喜，奉行。</td>
-    <td id='p19'>19. When that monk and the fourfold saṅgha heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p19'>19. When that monk and the fourfold <em>saṅgha</em> heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 <tr>
   <td class='ch' title='t125.2.567c27'></td>
@@ -143,10 +143,10 @@ next: ../12/EA_12_01.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0567b04" target="_blank">T125.2.567b04-c28</a>. This and the previous <em>sūtra</em> fit the basic theme of <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a>, but they don’t match any of those <em>sutta</em>s directly. This <em>sūtra</em> relates events that follow the previous <em>sūtra</em>. See the notes to the previous <em>sūtra</em> from some comments that apply to this one as well. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0567b04" target="_blank">T125.2.567b04-c28</a>. This and the previous <em>sūtra</em> fit the basic theme of <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a>, but they don’t match any of those <em>sutta</em>s directly. This <em>sūtra</em> relates events that follow the previous <em>sūtra</em>. See the notes to the previous <em>sūtra</em> for some comments that apply to this one as well. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>Devadatta</em>. C. 調達 (EMC. deu-dat = G. de[va]dat[o]). The translator used 婆達 (EMC. bua-dat = G. [de]vadat[o]) as an abbreviation of Devadatta’s name in the <em>uddāna</em> verse at the end of this chapter. 調達 appears to be a similar abbreviation, but here it’s the first and third syllable rather than the second and third. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>latercomer to the training</em>. C. 晩暮學. The lit. meaning is “sunset training.” Presumably, it was an idiom for becoming a monk late in life. This would imply that, as a result, the monk was set in his ways or views and more likely to object. [<a href="#ref3">back</a>]</p></li>
-<li id="n4"><p><em>three times</em>. The Taisho reads: “Up to three or four times” (乃至三四). I assume this is a typo for “repeated three times” (乃至再三) since the monk repeated his apologize thrice. [<a href="#ref4">back</a>]</p></li>
+<li id="n3"><p><em>latecomer to the training</em>. C. 晩暮學. The lit. meaning is “sunset training.” Presumably, it was an idiom for becoming a monk late in life. This would imply that, as a result, the monk was set in his ways or views and more likely to object. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>three times</em>. The Taisho reads: “Up to three or four times” (乃至三四). I assume this is a typo for “repeated three times” (乃至再三) since the monk repeated his apology thrice. [<a href="#ref4">back</a>]</p></li>
 </ol>
 <hr/>
 
