--- a/01_agama/ekottarika/12/EA_12_07.md
+++ b/01_agama/ekottarika/12/EA_12_07.md
@@ -23,7 +23,7 @@ next: EA_12_08.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.570b22'>「諸比丘，彼提婆達兜愚人取彼王子婆羅留支五百釜食供養。 設彼不與者，提婆達兜愚人終不作此惡。 以婆羅留支王子五百釜食日來供養，是故提婆達兜起五逆惡。 身壞命終，生摩訶阿鼻地獄15中。</td>
-    <td id='p3'>3. “Monks, that fool Devadattva took Prince *Pararuci’s<sup id="ref2"><a href="#n2">2</a></sup> offering of five hundred kettles of food. If he hadn’t given it to him, that fool Devadattva would have never done any evil. But the day came when Prince *Pararuci gave him five hundred kettles of food, and then Devadatta committed the five terrible sins. When his life ended, he was born in the Great Avici Hell.</td>
+    <td id='p3'>3. “Monks, that fool Devadatta took Prince *Pararuci’s<sup id="ref2"><a href="#n2">2</a></sup> offering of five hundred kettles of food. If he hadn’t given it to him, that fool Devadatta would have never done any evil. But the day came when Prince *Pararuci gave him five hundred kettles of food, and then Devadatta committed the five terrible sins. When his life ended, he was born in the Great Avici Hell.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.570b27'>「以此方便，當知利養甚重令人不得至無上正真之道。 若未生利養心，不應生，已生當滅之。 如是，諸比丘當作是學。」</td>
