--- a/01_agama/samyukta/04/SA4_2.md
+++ b/01_agama/samyukta/04/SA4_2.md
@@ -19,7 +19,7 @@ next: SA4_3.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.104b2'>爾時，世尊告諸比丘： 「有四聖諦。 何等為四？ 謂苦聖諦、苦集聖諦、苦滅聖諦、苦滅道跡聖諦。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are four noble truths. What are the four? They are the noble truth of suffering, the noble truth of suffering’s formation, the noble truth of suffering’s cessation, and the noble truth of the path to suffering’s cessation.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are four noble truths. What are the four? They are the noble truth of suffering, the noble truth of suffering’s formation, the noble truth of suffering’s cessation, and the noble truth of the path to suffering’s cessation.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.104b4'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
