--- a/01_agama/ekottarika/11/EA_11_09.md
+++ b/01_agama/ekottarika/11/EA_11_09.md
@@ -19,7 +19,7 @@ next: EA_11_10.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.567a15'>爾時，世尊告諸比丘： 「云何諸比丘？ 頗有見提婆達兜清白之法乎？ 然復，提婆達兜為惡深重，受罪經劫，不可療治。 於我法中，不見毫釐之善可稱記者。 以是之故，我今説提婆達兜諸罪之原首不可療治。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “How is it, monks? Does anyone see Devadatta’s<sup id="ref3"><a href="#n3">3</a></sup> teaching as clean? Still, Devadatta’s evil is quite grave, and he’ll get a punishment for an eon<sup id="ref4"><a href="#n4">4</a></sup>, which cannot be cured. I do not see a thread’s breadth of goodness in my Dharma that someone could describe of him. Because of this, I now say that the source of Devadatta’s punishment cannot be cured.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “How is it, monks? Does anyone see Devadatta’s<sup id="ref3"><a href="#n3">3</a></sup> teaching as clean? Still, Devadatta’s evil is quite grave, and he’ll get a punishment for an eon<sup id="ref4"><a href="#n4">4</a></sup> that cannot be cured. I do not see a thread’s breadth of goodness in my Dharma that someone could describe of him. Because of this, I now say that the source of Devadatta’s punishment cannot be cured.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.567a20'>「猶如有人而墮深厠。 形體沒溺，無有一淨處。 有人欲來濟拔其命，安置淨處。 遍觀厠側及彼人身，頗有淨處？『吾欲手捉拔濟出之。』彼人熟視，無一淨處而可捉者，便捨而去。</td>
@@ -44,7 +44,7 @@ next: EA_11_10.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0567a14" target="_blank">T125.2.567a14-b3</a>. While I’ve not found a direct parallel to this <em>sūtra</em>, it should be noted that <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a> share the same theme of Devadattva’s downfall being rooted in a desire for profit, but they include different metaphors to illustrate the point. Here, the Buddha’s declaration of Devadatta’s fate leads to an encounter with one of his supporters in the next <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0567a14" target="_blank">T125.2.567a14-b3</a>. While I’ve not found a direct parallel to this <em>sūtra</em>, it should be noted that <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a> share the same theme of Devadatta’s downfall being rooted in a desire for profit, but they include different metaphors to illustrate the point. Here, the Buddha’s declaration of Devadatta’s fate leads to an encounter with one of his supporters in the next <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>the Squirrels’ Bamboo Park</em>. C. 迦蘭陀竹園 (EMC. kă-lan-da = G. <em>Kalanda</em> + trans. 竹 = bamboo, 園 = park). P/S. <em>kalandaka</em> means “squirrel.” This park was apparently a place where squirrels were given offerings of food. A legend explained this with the story of a king who was saved from a poisonous snake while he was napping in the forest when a squirrel’s warning woke him. Assuming that the squirrel was a tree spirit, the king decreed that the squirrels be given offerings in thanks.</p>
 <p><em>Rājagṛha</em>. C. 羅閲城 (EMC. la-yiuɛt = G. \*Raya[gaha] + trans. 城 = city). P. Rājagaha, S. Rājagṛha. In G., <em>-j-</em> typically weakened to <em>-y-</em>, and there were no long vowels. The translit. appears abbreviated, or perhaps S. <em>gṛha</em> was trans. loosely as “city.” [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>Devadatta</em>. C. 提婆達兜 (EMC. dei-bua-dat-təu = G. <em>devadato</em>). Devadatta was a monk who attempted to create a schism in the Saṅgha and murder the Buddha. As a result, he figured prominently as an irredeemable villain in early Buddhist sources. For more about him, see Devadatta’s <a href="https://www.palikanon.com/english/pali_names/d/devadatta.htm" target="_blank">entry</a> in the <a href="https://www.palikanon.com/english/pali_names/dic_idx.html" target="_blank"><strong>Buddhist Dictionary of Pali Proper Names</strong></a>. [<a href="#ref3">back</a>]</p></li>
